--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Titillium+Web");
+@import url("https://fonts.googleapis.com/css?family=Titillium+Web:200,200i,300,300i,400,400i,600,600i,700,700i,900");
 @import url("https://fonts.googleapis.com/css?family=PT+Sans");
 * {
   box-sizing: border-box; }
@@ -112,5 +112,120 @@
   background-position: center;
   background-size: contain;
   background-repeat: repeat; }
+
+/*.left {
+    float: left;
+}*/
+.part-1 {
+  margin-top: 100px;
+  font-family: 'Titillium Web', sans-serif;
+  color: #414242;
+  width: 100%;
+  height: 100%; }
+  .part-1 .vertical-trace {
+    width: 2px;
+    height: 200px;
+    background-color: #414242;
+    position: relative;
+    left: 20px; }
+  .part-1 .title-1 {
+    display: flex; }
+    .part-1 .title-1 .square-2 {
+      -webkit-border-radius: 15% 0;
+      -moz-border-radius: 15% 0;
+      -ms-border-radius: 15% 0;
+      border-radius: 15% 0;
+      background-color: #414242;
+      width: 40px;
+      height: 40px; }
+      .part-1 .title-1 .square-2 .ico-formation {
+        background-image: url(../img/formation.svg);
+        width: 30px;
+        height: 30px;
+        background-size: cover;
+        background-position: center; }
+
+.title-2 {
+  position: relative;
+  bottom: 175px;
+  left: 50px; }
+
+.name-t2 {
+  font-size: 2.5rem;
+  font-weight: bold; }
+
+.annee {
+  font-size: 1.8rem; }
+
+.circle {
+  -webkit-border-radius: 20%;
+  -moz-border-radius: 20%;
+  -ms-border-radius: 20%;
+  border-radius: 20%;
+  position: relative;
+  right: 6px;
+  top: 40px;
+  width: 15px;
+  height: 15px;
+  background-color: #414242; }
+
+.circle-2 {
+  -webkit-border-radius: 20%;
+  -moz-border-radius: 20%;
+  -ms-border-radius: 20%;
+  border-radius: 20%;
+  position: relative;
+  right: 6px;
+  top: 140px;
+  width: 15px;
+  height: 15px;
+  background-color: #414242; }
+
+.formation {
+  padding-left: 10px;
+  font-size: 3rem;
+  margin: 0;
+  font-weight: bold;
+  color: #414242; }
+
+.content {
+  position: relative;
+  bottom: 175px;
+  left: 50px;
+  font-size: 1.8rem; }
+
+/*
+.title-3 {
+    position: relative;
+    bottom: 55px;
+    left: 40px;
+}
+
+.name-t3 {
+    font-size: 2.5rem;
+    font-family: 'Titillium Web', sans-serif;
+    font-weight: bold;
+}
+
+.annee-3 {
+    font-size: 1.8rem;
+}
+
+.content-3 {
+    position: relative;
+    bottom: 55px;
+    left: 40px;
+    font-size: 1.8rem;
+}
+*/
+.content-2 {
+  position: relative;
+  width: 100%;
+  top: 80px;
+  right: 15px; }
+
+.content-3 {
+  position: relative;
+  top: 70px; }
 
 /*# sourceMappingURL=style.css.map */
