First version finish

--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,9 @@
   margin: 5px 10px;
   font-family: 'PT Sans', sans-serif !important;
   font-weight: bold;
-  font-size: 2rem; }
+  font-size: 2rem;
+  text-decoration: none;
+  color: #fff; }
 
 .square {
   -webkit-border-radius: 15% 0;
@@ -80,6 +82,13 @@
   background-color: white;
   width: 35px;
   height: 35px; }
+
+.hover-ico:hover {
+  background-color: #b6bdbf; }
+
+.hover-link {
+  color: #b6bdbf;
+  text-decoration: none; }
 
 .twitter {
   background-image: url(../img/twitter.svg);
@@ -107,125 +116,323 @@
 
 .bottom {
   background-image: url(../img/bg.jpg);
-  height: 1000px;
+  height: 2000px;
   width: 100%;
   background-position: center;
   background-size: contain;
   background-repeat: repeat; }
 
-/*.left {
-    float: left;
-}*/
 .part-1 {
-  margin-top: 100px;
+  margin-top: 70px;
+  margin-left: 50px;
+  height: 270px; }
+
+.part-2 {
+  margin-top: 50px;
+  margin-left: 50px;
+  height: 270px; }
+
+.part-3 {
+  margin-top: 50px;
+  margin-left: 50px;
+  height: 370px; }
+
+.part-4 {
+  margin-top: 50px;
+  margin-left: 50px; }
+
+.square-l {
+  -webkit-border-radius: 15% 0;
+  -moz-border-radius: 15% 0;
+  -ms-border-radius: 15% 0;
+  border-radius: 15% 0;
+  background-color: #414242;
+  width: 45px;
+  height: 45px; }
+  .square-l .ico-formation {
+    background-image: url(../img/formation.svg);
+    width: 35px;
+    height: 35px;
+    background-size: cover;
+    background-position: center; }
+
+.title {
+  display: flex; }
+
+.verticale-lign {
+  margin-left: 20px;
+  width: 1px;
+  height: 200px;
+  background-color: #414242; }
+
+.square-xs {
+  -webkit-border-radius: 30%;
+  -moz-border-radius: 30%;
+  -ms-border-radius: 30%;
+  border-radius: 30%;
+  position: relative;
+  width: 12px;
+  height: 12px;
+  background-color: #414242; }
+
+.title-1 {
   font-family: 'Titillium Web', sans-serif;
+  font-weight: bold;
+  text-transform: uppercase;
+  font-size: 30px;
   color: #414242;
-  width: 100%;
-  height: 100%; }
-  .part-1 .vertical-trace {
-    width: 2px;
-    height: 200px;
-    background-color: #414242;
-    position: relative;
-    left: 20px; }
-  .part-1 .title-1 {
-    display: flex; }
-    .part-1 .title-1 .square-2 {
-      -webkit-border-radius: 15% 0;
-      -moz-border-radius: 15% 0;
-      -ms-border-radius: 15% 0;
-      border-radius: 15% 0;
-      background-color: #414242;
-      width: 40px;
-      height: 40px; }
-      .part-1 .title-1 .square-2 .ico-formation {
-        background-image: url(../img/formation.svg);
-        width: 30px;
-        height: 30px;
-        background-size: cover;
-        background-position: center; }
+  padding-left: 20px; }
 
 .title-2 {
-  position: relative;
-  bottom: 175px;
-  left: 50px; }
+  display: flex;
+  color: #2c2c2c;
+  font-family: 'Titillium Web', sans-serif; }
 
-.name-t2 {
-  font-size: 2.5rem;
-  font-weight: bold; }
+.object {
+  font-weight: bold;
+  font-size: 24px;
+  text-transform: uppercase; }
 
 .annee {
-  font-size: 1.8rem; }
+  font-size: 18px;
+  padding-top: 5px;
+  padding-left: 5px; }
+
+.describe {
+  color: #414242;
+  font-size: 16px; }
+
+.square-xs-1 {
+  bottom: 140px;
+  left: 15px; }
+
+.square-xs-2 {
+  bottom: 70px;
+  left: 15px; }
+
+.item-1 {
+  position: relative;
+  bottom: 180px;
+  left: 35px; }
+
+.item-2 {
+  position: relative;
+  bottom: 150px;
+  left: 35px; }
+
+.ico-pro {
+  background-image: url(../img/experience.svg);
+  width: 35px;
+  height: 35px;
+  background-size: cover;
+  background-position: center; }
+
+.ico-diplome {
+  background-image: url(../img/diploma.svg);
+  width: 35px;
+  height: 35px;
+  background-size: cover;
+  background-position: center; }
+
+.verticale-lign-3 {
+  margin-left: 20px;
+  width: 1px;
+  height: 280px;
+  background-color: #414242; }
+
+.square-xs-3 {
+  bottom: 220px;
+  left: 15px; }
+
+.item-3 {
+  position: relative;
+  bottom: 380px;
+  left: 35px; }
+
+.ico-competence {
+  background-image: url(../img/skills.svg);
+  width: 35px;
+  height: 35px;
+  background-size: cover;
+  background-position: center; }
+
+.skills {
+  font-family: 'Titillium Web', sans-serif;
+  font-size: 16px;
+  display: flex;
+  padding-top: 30px;
+  font-weight: 400;
+  padding-left: 40px; }
+
+.skill {
+  display: flex;
+  flex-direction: column; }
+
+.competences {
+  display: flex;
+  flex-direction: column; }
+
+.competence {
+  padding-top: 5px; }
+
+.circle-check {
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  border-radius: 50%;
+  width: 15px;
+  height: 15px;
+  background-color: #414242;
+  margin-left: 5px;
+  margin-top: 12px; }
+
+.circle-none {
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  border-radius: 50%;
+  width: 15px;
+  height: 15px;
+  background-color: #d7d9d7;
+  margin-left: 5px;
+  margin-top: 12px; }
 
 .circle {
-  -webkit-border-radius: 20%;
-  -moz-border-radius: 20%;
-  -ms-border-radius: 20%;
-  border-radius: 20%;
-  position: relative;
-  right: 6px;
-  top: 40px;
-  width: 15px;
-  height: 15px;
-  background-color: #414242; }
+  display: flex;
+  padding-left: 70px; }
 
-.circle-2 {
-  -webkit-border-radius: 20%;
-  -moz-border-radius: 20%;
-  -ms-border-radius: 20%;
-  border-radius: 20%;
-  position: relative;
-  right: 6px;
-  top: 140px;
-  width: 15px;
-  height: 15px;
-  background-color: #414242; }
+.ico-perso {
+  background-image: url(../img/information.svg);
+  width: 35px;
+  height: 35px;
+  background-size: cover;
+  background-position: center; }
 
-.formation {
-  padding-left: 10px;
-  font-size: 3rem;
-  margin: 0;
-  font-weight: bold;
-  color: #414242; }
+.inline-info {
+  display: flex; }
 
-.content {
-  position: relative;
-  bottom: 175px;
-  left: 50px;
-  font-size: 1.8rem; }
+.info {
+  font-family: 'Titillium Web', sans-serif;
+  padding-top: 30px;
+  padding-left: 50px; }
 
-/*
-.title-3 {
-    position: relative;
-    bottom: 55px;
-    left: 40px;
-}
+.perso {
+  padding-top: 70px; }
 
-.name-t3 {
-    font-size: 2.5rem;
-    font-family: 'Titillium Web', sans-serif;
-    font-weight: bold;
-}
+.strong {
+  font-weight: bold; }
 
-.annee-3 {
-    font-size: 1.8rem;
-}
+.none-strong {
+  padding-left: 20px; }
 
-.content-3 {
-    position: relative;
-    bottom: 55px;
-    left: 40px;
-    font-size: 1.8rem;
-}
-*/
-.content-2 {
-  position: relative;
-  width: 100%;
-  top: 80px;
-  right: 15px; }
+.ico-contact {
+  background-image: url(../img/contact.svg);
+  width: 35px;
+  height: 35px;
+  background-size: cover;
+  background-position: center; }
 
-.content-3 {
-  position: relative;
-  top: 70px; }
+.ico-tel {
+  background-image: url(../img/smartphone.svg);
+  width: 25px;
+  height: 25px;
+  background-size: cover;
+  background-position: center; }
+
+.ico-mail {
+  background-image: url(../img/mail.svg);
+  width: 25px;
+  height: 25px;
+  background-size: cover;
+  background-position: center; }
+
+.ico-site {
+  background-image: url(../img/site.svg);
+  width: 25px;
+  height: 25px;
+  background-size: cover;
+  background-position: center; }
+
+.ico-adress {
+  background-image: url(../img/place.svg);
+  width: 25px;
+  height: 25px;
+  background-size: cover;
+  background-position: center; }
+
+.info-contact {
+  padding-left: 50px;
+  padding-top: 30px; }
+
+.content-contact {
+  padding-left: 20px; }
+
+.inline-contact {
+  padding-top: 15px; }
+
+.contact {
+  padding-top: 50px; }
+
+.price {
+  color: #414242;
+  padding-top: 50px; }
+
+.ico-price {
+  background-image: url(../img/trophy.svg);
+  width: 25px;
+  height: 25px;
+  background-size: cover;
+  background-position: center; }
+
+.price-describe-an {
+  padding-left: 5px; }
+
+.title-price {
+  font-size: 20px;
+  font-family: "Titillium Web", sans-serif;
+  font-weight: bold; }
+
+.price-content {
+  padding-top: 20px;
+  padding-left: 40px; }
+
+.price-info {
+  padding-top: 30px; }
+
+.ico-skill {
+  background-image: url(../img/skills-2.svg);
+  width: 25px;
+  height: 25px;
+  background-size: cover;
+  background-position: center; }
+
+.part-5 {
+  padding-top: 50px; }
+
+.circle-xs {
+  display: flex;
+  padding-left: 40px; }
+
+.circle-check-xs {
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  border-radius: 50%;
+  width: 10px;
+  height: 10px;
+  background-color: #414242;
+  margin-left: 5px;
+  margin-top: 12px; }
+
+.circle-none-xs {
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  border-radius: 50%;
+  width: 10px;
+  height: 10px;
+  background-color: #d7d9d7;
+  margin-left: 5px;
+  margin-top: 12px; }
 
 /*# sourceMappingURL=style.css.map */
