--- a/css/style.css
+++ b/css/style.css
@@ -66,6 +66,10 @@
   display: flex;
   padding-right: 70px; }
 
+a:hover, a:focus, a:active {
+  text-decoration: none;
+  color: #b6bdbf; }
+
 .url {
   margin: 5px 10px;
   font-family: 'PT Sans', sans-serif !important;
@@ -83,12 +87,15 @@
   width: 35px;
   height: 35px; }
 
-.hover-ico:hover {
+.hover-ico {
   background-color: #b6bdbf; }
 
 .hover-link {
   color: #b6bdbf;
   text-decoration: none; }
+
+.social-hover:hover {
+  background-color: #b6bdbf; }
 
 .twitter {
   background-image: url(../img/twitter.svg);
@@ -116,7 +123,7 @@
 
 .bottom {
   background-image: url(../img/bg.jpg);
-  height: 2000px;
+  height: 1400px;
   width: 100%;
   background-position: center;
   background-size: contain;
@@ -140,6 +147,9 @@
 .part-4 {
   margin-top: 50px;
   margin-left: 50px; }
+
+.part-5 {
+  padding-top: 50px; }
 
 .square-l {
   -webkit-border-radius: 15% 0;
@@ -405,9 +415,6 @@
   height: 25px;
   background-size: cover;
   background-position: center; }
-
-.part-5 {
-  padding-top: 50px; }
 
 .circle-xs {
   display: flex;
