--- a/css/style.css
+++ b/css/style.css
@@ -74,7 +74,7 @@ a:hover, a:focus, a:active {
   margin: 5px 10px;
   font-family: 'PT Sans', sans-serif !important;
   font-weight: bold;
-  font-size: 2rem;
+  font-size: 1.5rem;
   text-decoration: none;
   color: #fff; }
 
@@ -189,7 +189,7 @@ a:hover, a:focus, a:active {
   font-family: 'Titillium Web', sans-serif;
   font-weight: bold;
   text-transform: uppercase;
-  font-size: 30px;
+  font-size: 3rem;
   color: #414242;
   padding-left: 20px; }
 
@@ -200,17 +200,18 @@ a:hover, a:focus, a:active {
 
 .object {
   font-weight: bold;
-  font-size: 24px;
-  text-transform: uppercase; }
+  font-size: 2.5rem;
+  text-transform: uppercase;
+  display: flex; }
 
 .annee {
-  font-size: 18px;
+  font-size: 1.8rem;
   padding-top: 5px;
   padding-left: 5px; }
 
 .describe {
   color: #414242;
-  font-size: 16px; }
+  font-size: 1.6rem; }
 
 .square-xs-1 {
   bottom: 140px;
@@ -273,6 +274,14 @@ a:hover, a:focus, a:active {
   padding-top: 30px;
   font-weight: 400;
   padding-left: 40px; }
+
+.skills-xs {
+  font-family: 'Titillium Web', sans-serif;
+  font-size: 16px;
+  display: flex;
+  padding-top: 30px;
+  font-weight: 400;
+  padding-left: 10%; }
 
 .skill {
   display: flex;
@@ -418,7 +427,7 @@ a:hover, a:focus, a:active {
 
 .circle-xs {
   display: flex;
-  padding-left: 40px; }
+  padding-left: 10px; }
 
 .circle-check-xs {
   -webkit-border-radius: 50%;
@@ -441,5 +450,8 @@ a:hover, a:focus, a:active {
   background-color: #d7d9d7;
   margin-left: 5px;
   margin-top: 12px; }
+
+.display-none {
+  padding-left: 5px; }
 
 /*# sourceMappingURL=style.css.map */
