--- a/scss/style.scss
+++ b/scss/style.scss
@@ -96,7 +96,7 @@ a:hover, a:focus, a:active {
     margin: 5px 10px;
     font-family: 'PT Sans', sans-serif !important;
     font-weight: bold;
-    font-size: 2rem;
+    font-size: 1.5rem;
     text-decoration: none;
     color: $white;
 }
@@ -219,7 +219,7 @@ a:hover, a:focus, a:active {
     font-family: 'Titillium Web', sans-serif;
     font-weight: bold;
     text-transform: uppercase;
-    font-size: 30px;
+    font-size: 3rem;
     color: $grey;
     padding-left: 20px;
 }
@@ -232,19 +232,20 @@ a:hover, a:focus, a:active {
 
 .object {
     font-weight: bold;
-    font-size: 24px;
+    font-size: 2.5rem;
     text-transform: uppercase;
+    display: flex;
 }
 
 .annee {
-    font-size: 18px;
+    font-size: 1.8rem;
     padding-top: 5px;
     padding-left: 5px;
 }
 
 .describe {
     color: $grey;
-    font-size: 16px;
+    font-size: 1.6rem;
 }
 
 .square-xs-1 {
@@ -318,6 +319,15 @@ a:hover, a:focus, a:active {
     padding-top: 30px;
     font-weight: 400;
     padding-left: 40px;
+}
+
+.skills-xs {
+    font-family: 'Titillium Web', sans-serif;
+    font-size: 16px;
+    display: flex;
+    padding-top: 30px;
+    font-weight: 400;
+    padding-left: 10%;
 }
 
 .skill {
@@ -486,7 +496,7 @@ padding-top: 50px;
 
 .circle-xs {
     display: flex;
-    padding-left: 40px;
+    padding-left: 10px;
 }
 .circle-check-xs {
     @include border-radius (50%);
@@ -504,4 +514,8 @@ padding-top: 50px;
     background-color: $white2;
     margin-left: 5px;
     margin-top: 12px;
+}
+
+.display-none {
+    padding-left: 5px;
 }
